--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,7 @@
 //Color Pallette based on Under Dusken's own layout documentation. 
 //Green is based off complimentary color chart off Red.
 //Colors can also be used at 50% and 20%, in accordance with the graphic profile.
+//Dette er en test
 @blue: #00abd7;
 @purple: #841764;
 @red: #841764;
