--- a/css/style.less
+++ b/css/style.less
@@ -119,6 +119,7 @@ margin-top: : 3px;
 	margin-bottom: 20px;
 	.quoteright {
 		float:right;
+
 		max-width: 200px;
 		max-height: 300px;
 		margin: 6px;
@@ -140,6 +141,9 @@ margin-top: : 3px;
 	.quoteacross {
 		font-size:1.5em;
 		text-align: center;}
+	h2{
+		margin-top: 1em;
+	}
 }
 
 .repmainimage {
