Fjernet img border og lagt til bilder til bruk i rep.html

--- a/css/style.less
+++ b/css/style.less
@@ -202,8 +202,9 @@ margin-top: : 3px;
 	}
 }
 
+//Selector for images on the front page navigation as well as in articles
 .article img{
-	border: black solid 1px;
+
 }
 
 #artleft{
