Header Menu consistensy/customization, Debate page created
Fixed copy text and links in the header menu of sites, as well as
create a HTML document for the Debate layout to be created.

Also added native images to Art1.htmls Related Stories row.

--- a/css/style.less
+++ b/css/style.less
@@ -125,6 +125,13 @@ margin-top: : 3px;
 		margin: 6px;
 		font-size: 1.5em;
 	}
+	&:before {
+		content: "“";
+	}
+
+	&:after {
+		content:"”"
+	}
 }
 
 .quoteacross {
