Oppdaterte bootstrap.css

--- a/css/style.less
+++ b/css/style.less
@@ -220,7 +220,11 @@ margin-top: : 3px;
 }
 
 .artblock{
-	margin-bottom: 2em;
+	margin-bottom: 1em;
+
+	h2 {
+		margin-top: 1em;
+	}
 }
 
 // Landscape phones and down
