Globale oppdateringer i header

--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,5 @@
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
 //Color Pallette based on Under Dusken's own layout documentation. 
 //Green is based off complimentary color chart off Red.
 //Colors can also be used at 50% and 20%, in accordance with the graphic profile.
@@ -200,6 +202,7 @@ margin-top: : 3px;
 #multimediarow {
 	margin-top: 10px ;
 }
+
 
 .footer{
 	background-color: #eee;
