--- a/css/style.less
+++ b/css/style.less
@@ -23,14 +23,15 @@
 }
 
 #main-logo {
-	float: left;
-	margin: 0.55em 0 0 0;
-	padding: 0;
-	line-height: 1;
-	display: inline-block;
-	width: 100%;
-	color: #333;
-	font-size: 5vw;
+	// float: left;
+	// margin: 0.55em 0 0 0;
+	// padding: 0;
+	// line-height: 1;
+	// display: inline-block;
+	// width: 100%;
+	// color: #333;
+	// font-size: 5vw;
+	display: block;
 }
 
 #category-menu {
@@ -62,7 +63,7 @@
 #main-menu {
 	float: left;
 	//margin-left: 4em;
-	margin-top: 38px;
+	margin-top: 28px;
 
 	ul {
 		line-height: 1;
@@ -267,7 +268,7 @@ p {
 
 #global-header{
 	#main-logo {
-		font-size: 30px;
+
 	}
 
 }
@@ -279,7 +280,6 @@ p {
 
 #global-header{
 	#main-logo {
-		font-size: 30px;
 	}
 
 }
