Prøver å fikse header. Enda ikke helt der. Logo skalerer funky

--- a/css/style.less
+++ b/css/style.less
@@ -23,15 +23,8 @@
 }
 
 #main-logo {
-	// float: left;
-	// margin: 0.55em 0 0 0;
-	// padding: 0;
-	// line-height: 1;
-	// display: inline-block;
-	// width: 100%;
-	// color: #333;
-	// font-size: 5vw;
 	display: block;
+	float: left;
 }
 
 #category-menu {
@@ -62,7 +55,7 @@
 
 #main-menu {
 	float: left;
-	//margin-left: 4em;
+	margin-left: 20% + 20px;
 	margin-top: 28px;
 
 	ul {
@@ -270,7 +263,6 @@ p {
 	#main-logo {
 
 	}
-
 }
 
 }
@@ -282,6 +274,9 @@ p {
 	#main-logo {
 	}
 
+	#global-search {
+		
+	}
 }
 
 }
