--- a/css/style.less
+++ b/css/style.less
@@ -130,36 +130,7 @@ a:active {
 		max-height: 300px;
 		margin: 6px;
 		font-size: 1.5em;
-	}
-<<<<<<< HEAD
-
-	
-}
-
-p {
-	a {
-		text-decoration: none;
-		color: red;
-	}
-	a:link {
-		color:red;
-		text-decoration: none;
-		}      /* unvisited link */
-	a:visited {
-		color:red;
-		text-decoration: none;
-		}  /* visited link */
-	a:hover {
-		color:red;
-		text-decoration: underline;
-		background-color: rgba(255, 0,0,.05);
-		}  /* mouse over link */
-	a:active {
-		color:red;
-		text-decoration: none;
-	}
-=======
->>>>>>> Div
+	} 
 }
 
 .quoteacross {
@@ -268,6 +239,17 @@ p {
 }
 
 }
+
+//Debattsite CSS
+.temamenu {
+border-bottom: 1px solid #eee;
+margin-bottom: 20px;
+	h1 {
+		padding-bottom: 1px;
+	}
+}
+
+
 
 // Portrait tablet to landscape and desktop
 @media (min-width: 768px) and (max-width: 980px) { 
