Added sketch-images to debate section and fixed some headers&typography.

--- a/css/style.less
+++ b/css/style.less
@@ -391,13 +391,30 @@ p {
 
 //Debattsite CSS
 .temamenu {
-border-bottom: 1px solid #eee;
-margin-bottom: 20px;
+	border-bottom: 2px solid #eee;
+	margin-bottom: 20px;
 	h1 {
 		padding-bottom: 1px;
 	}
 }
 
+.pageheader {
+	border-bottom: 2px solid #eee;
+	margin-bottom: 20px;
+	h1 {
+		padding-top: 0px;
+		padding-bottom: 5px;
+		font-size: 3em;
+	}
+}
+
+#debattlead{
+	margin-top: 30px;
+}
+
+#debattnav{
+	margin-top: 30px;
+}
 
 
 // Portrait tablet to landscape and desktop
