Added Search-page details and list

--- a/css/style.less
+++ b/css/style.less
@@ -416,6 +416,15 @@ p {
 	margin-top: 30px;
 }
 
+//Søkeresultat
+#sokrad{
+	margin-top: 20px;
+}
+#sokdato {
+	font-size: 2em;
+	font-family: ProximaNovaRgBold;
+	margin-top: 12px;
+}
 
 // Portrait tablet to landscape and desktop
 @media (min-width: 768px) and (max-width: 980px) { 
